# offchain-matching-onchain-settlement

./: .gitignore  Cargo.toml  README.md  codecov.yml  deny.toml  flake.nix
.github/workflows/: audit.yml  ci.yml
contracts/: foundry.toml  package.json
contracts/src/: Exchange.sol  MockERC20.sol
contracts/test/: Exchange.t.sol
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/e2e-tests/: Cargo.toml  build.rs
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: cancel_e2e.rs  deposit_sync.rs  e2e.rs  gateway_e2e.rs  restoration_e2e.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: batch.rs  deposit.rs  eip712.rs  ledger.rs  lib.rs  main.rs  persistence.rs  routes.rs  state.rs  ws.rs  ws_registry.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/src/: book.rs  engine.rs  lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs  migrations.rs  serialization.rs
crates/settlement-core/: Cargo.toml
crates/settlement-core/src/: lib.rs
crates/settlement-evm/: Cargo.toml
crates/settlement-evm/src/: abi.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  order.rs  settlement.rs  trade.rs
