[package]
name = "e2e-tests"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
alloy = { workspace = true }
eyre = { workspace = true }
gateway = { path = "../gateway" }
settlement-evm = { path = "../settlement-evm" }
persistence = { workspace = true }
types = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
