[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
types = { workspace = true }
matching-engine = { workspace = true }
settlement-core = { workspace = true }
alloy = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled"] }
settlement-evm = { path = "../settlement-evm" }
clap = { workspace = true }

[[bin]]
name = "gateway"
path = "src/main.rs"

[dev-dependencies]
reqwest = { workspace = true }
tokio-tungstenite = "0.26"
tempfile = "3"
