[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
types = { workspace = true }
matching-engine = { workspace = true }
settlement-core = { workspace = true }
alloy = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
settlement-evm = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[[bin]]
name = "gateway"
path = "src/main.rs"

[dev-dependencies]
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
